# movie-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
movie-catalog/: .coveragerc  app_lifespan.py  main.py  manage.bat  stuff.py
movie-catalog/api/: __init__.py
movie-catalog/api/api_v1/: __init__.py
movie-catalog/api/api_v1/auth/services/: __init__.py  redis_token_helper.py  redis_users_helper.py  token_helper.py  users_helper.py
movie-catalog/api/api_v1/movie_urls/: crud.py  dependencies.py  redis.py  views.py
movie-catalog/api/api_v1/movie_urls/views/: details_views.py  list_views.py
movie-catalog/commands/: cli.py  hello.py  tokens.py
movie-catalog/core/: config.py
movie-catalog/schemas/: movie_url.py
movie-catalog/testing/: conftest.py
movie-catalog/testing/test_api/: conftest.py  test_views.py
movie-catalog/testing/test_api/test_api_v1/test_auth/test_services/: redis_token_helper.py
movie-catalog/testing/test_api/test_api_v1/test_movie_urls/: test_crud.py  test_dependencies.py
movie-catalog/testing/test_api/test_api_v1/test_movie_urls/test_views/test_list_views/: tets_create.py
movie-catalog/testing/test_schemas/: test_movie_url.py
