[project]
name = "movie-catalog"
version = "0.1.0"
description = "FastAPI movie-catalog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard,standart]>=0.116.2",
    "redis[hiredis]>=7.1.0",
    "typer>=0.17.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true